# MIT License
#
# Copyright (c) 2023 Advanced Micro Devices, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = ["setuptools>=62.6", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrsmi"
description = "Python System Management Library for AMD GPUs"
maintainers = [{name = "Younseo Roh", email = "younseo.roh@amd.com"}]
license = {text = "MIT License"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Hardware',
    'Topic :: System :: Systems Administration',
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # "hip-python >= 5.6",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ROCm/pyrsmi"
Source = "https://github.com/ROCm/pyrsmi"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pyrsmi/_version.py"
versionfile_build = "pyrsmi/_version.py"
tag_prefix = "v"
parentdir_prefix = "pyrsmi-"
